# gwex_py

./: .markdownlint.json  QUICK_REFERENCE.md  README.md  TRANSLATION_NOTES.md  __init__.py  core.py  distributions.py  load_ideam_data.py  precipitation.py  pyproject.toml  simulation.py  utils.py
gwex_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
